<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".game_settings">

    <android.support.v7.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar_bottom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
    />
    <android.support.v7.widget.Toolbar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/toolbar_upper"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="368dp"
            android:layout_height="383dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/toolbar_bottom"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_upper" android:id="@+id/layout_settings_items">
        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/radio_group">
            <RadioButton
                    android:text="@string/begginer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButton_begginer"/>
            <RadioButton
                    android:text="@string/intermediate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButton_intermediate"/>
            <RadioButton
                    android:text="@string/advanced"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButton_advanced"/>
            <RadioButton
                    android:text="@string/custom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/radioButton_custom"/>
        </RadioGroup>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/layout_custom_settings">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/layout_width_height">
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText_width" android:layout_weight="1" android:hint="Field Width"/>
                <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/editText_height" android:layout_weight="1" android:hint="Field Height"/>
            </LinearLayout>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/editText_bombs" android:layout_weight="1" android:hint="Bombs count"/>
        </LinearLayout>
    </LinearLayout>
    <Button
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_back"
            app:layout_constraintTop_toTopOf="@+id/toolbar_upper"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_upper"
            app:layout_constraintStart_toStartOf="@+id/toolbar_upper" android:layout_marginStart="8dp"/>
    <Button
            android:text="@string/apply_and_restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_apply_restart" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="@+id/toolbar_bottom" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar_bottom"
            app:layout_constraintTop_toTopOf="@+id/toolbar_bottom"/>
</android.support.constraint.ConstraintLayout>